Fix topic title display on mobile

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -141,6 +141,10 @@ header .header-buttons {
 
 .topic-list .main-link {
     margin-bottom: 14px;
+    .title {
+        font-size: 14px;
+        font-weight: 500;
+    }
 }
 
 .topic-list .topic-item-stats-extra {
